fix:  fix text alignment of module index for sdl

--- a/docs/sdl/carp_style.css
+++ b/docs/sdl/carp_style.css
@@ -29,6 +29,10 @@ a:hover {
     margin-bottom: 1em;
 }
 
+.index {
+  text-align: left;
+}
+
 .args {
   background-color: #eee;
   padding: 3px;
